force-app/main/default/objects/Etap_rekrutacji__c/Etap_rekrutacji__c.object-meta.xml
<CustomObject>
    <description>Etap rekrutacji</description>
    <label>Etap rekrutacji</label>
    <nameField>
        <displayFormat>E-{0000000000}</displayFormat>
        <label>Numer Etapu</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Etapy rekrutacji</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>