force-app/main/default/objects/Etap_rekrutacji__c/fields/Aplikacja__c.field-meta.xml
<CustomField>
    <fullName>Aplikacja__c</fullName>
    <description>Aplikacja której dotyczy etap</description>
    <inlineHelpText>Aplikacja której dotyczy etap</inlineHelpText>
    <label>Aplikacja</label>
    <referenceTo>Aplikacja__c</referenceTo>
    <relationshipLabel>Etapy rekrutacji</relationshipLabel>
    <relationshipName>Etapy_rekrutacji</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>