force-app/main/default/objects/Etap_rekrutacji__c/fields/Czas_trwania_etapu__c.field-meta.xml
<CustomField>
    <fullName>Czas_trwania_etapu__c</fullName>
    <description>Czas trwania etapu od rozpoczęcia do zakończenia w minutach</description>
    <formula>IF(ISBLANK(Data_zakonczenia__c), NULL, Data_zakonczenia__c - Data_rozpoczecia__c)</formula>
    <inlineHelpText>Czas trwania etapu od rozpoczęcia do zakończenia w minutach</inlineHelpText>
    <label>Czas trwania etapu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>