force-app/main/default/objects/Etap_rekrutacji__c/fields/Data_rozpoczecia__c.field-meta.xml
<CustomField>
    <fullName>Data_rozpoczecia__c</fullName>
    <description>Data rozpoczęcia etapu</description>
    <inlineHelpText>Data rozpoczęcia etapu</inlineHelpText>
    <label>Data rozpoczęcia</label>
    <required>true</required>
    <type>Date</type>
</CustomField>