force-app/main/default/objects/Etap_rekrutacji__c/fields/Data_zakonczenia__c.field-meta.xml
<CustomField>
    <fullName>Data_zakonczenia__c</fullName>
    <description>Data zakończenia etapu</description>
    <inlineHelpText>Data zakończenia etapu</inlineHelpText>
    <label>Data zakończenia</label>
    <type>Date</type>
</CustomField>