force-app/main/default/objects/Etap_rekrutacji__c/fields/Komentarz__c.field-meta.xml
<CustomField>
    <fullName>Komentarz__c</fullName>
    <description>Komentarz odnośnie etapu</description>
    <inlineHelpText>Komentarz odnośnie etapu</inlineHelpText>
    <label>Komentarz</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>