force-app/main/default/objects/Etap_rekrutacji__c/fields/Nazwa_etapu__c.field-meta.xml
<CustomField>
    <fullName>Nazwa_etapu__c</fullName>
    <description>Nazwa etapu</description>
    <inlineHelpText>Nazwa etapu</inlineHelpText>
    <label>Nazwa etapu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rozmowa HR</fullName>
            </value>
            <value>
                <fullName>Rozmowa techniczna</fullName>
            </value>
            <value>
                <fullName>Decyzja</fullName>
            </value>
            <value>
                <fullName>Oferta zatrudnienia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>