force-app/main/default/objects/Etap_rekrutacji__c/validationRules/Data_zakonczenia_wieksza_rowna_data_rozp.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_zakonczenia_wieksza_rowna_data_rozp</fullName>
    <active>true</active>
    <description>Uniemożliwia ustawienie daty zakończenia wcześniej niż daty rozpoczęcia</description>
    <errorConditionFormula>NOT(ISBLANK(Data_zakonczenia__c)) &amp;&amp; Data_zakonczenia__c &lt; Data_rozpoczecia__c</errorConditionFormula>
    <errorMessage>Data zakończenia nie może być wcześniejsza niż data rozpoczęcia.</errorMessage>
</ValidationRule>