force-app/main/default/objects/Etap_rekrutacji__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aplikacja__c</columns>
    <columns>Nazwa_etapu__c</columns>
    <columns>Data_rozpoczecia__c</columns>
    <columns>Data_zakonczenia__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>